# Sales_UV

./: 01DataIngestion&DataCleaning.ipynb  02Eda.ipynb  main.py  pyproject.toml
data/output/: MasterTable.csv
data/raw/: Superstore_mod_v1.xlsx
