[project]
name = "sales-analysis-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "levenshtein>=0.27.1",
    "matplotlib>=3.10.5",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "plotly-express>=0.4.1",
    "rapidfuzz>=3.13.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.48.1",
]
